<resources>
    <string name="ESRI_WORLD_STREET_MAP">http://services.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer</string>
    <string name="LATEST_APK_URL">http://fenixapps2.fao.org/repository/crowddata/CrowdPricesLatest.apk</string>
    <string name="LATEST_XML_URL">http://fenixapps2.fao.org/repository/crowddata/AndroidManifest.xml</string>
    <string name="CHANGELOG_URL">http://fenixapps2.fao.org/repository/crowddata/changelog.txt</string>
    <string name="UPLOAD_URL">http://fenixapps.fao.org/crowdprices-services/rest/insert/haititest/haititest/crowdprices/data/citycode,marketcode,commoditycode,varietycode,date,currencycode,measurementunitcode,price/</string>
    <string name="POSTGRESQL_URL_PROD">http://168.202.28.214:10900/crowddata</string>
    <string name="POSTGRESQL_URL">http://fenixapps2.fao.org/restsql-0.8.8/res</string>
    <string name="MONGO_URL">http://168.202.28.214:10900/crowddata</string>
    <string name="MONGO_URL2">http://exldvsdmxreg1.ext.fao.org:10900/crowddata/insert</string>
    <string name="RAW_URL">http://fenixapps2.fao.org/repository/crowddata/raw</string>
    <string name="STARTING_LAT">-1.2962</string>
    <string name="STARTING_LON">36.8314</string>
    <string name="MainVersionDotted">1.</string>
    <string name="sdpath">/crowdpricesRC/</string>
    <string name="apkpath">/sdcard/crowdpricesRC/CrowdPrices.apk</string>
    <string-array name="AHM_S1">
		<item>Bees</item>
		<item>Birds</item>		
		<item>Buffaloes</item>
		<item>Camelidae</item>
		<item>Cats</item>
		<item>Cattle</item>
		<item>Crustaceans</item>
		<item>Dogs</item>
		<item>Equidae</item>
		<item>Fish</item>
		<item>Goats</item>		
		<item>Molluscs</item>
		<item>Rabbits/Hares</item>		
		<item>Sheep</item>				
		<item>Swine</item>
		<item>Wild species</item>
		<item>All</item>						
	</string-array>
	<string-array name="AHM_D0"> 
		<item>Acarapisosis of honey bees</item>
		<item>American foulbrood of honey bees</item>
		<item>Tropilaelaps infestation of honey bees</item>
		<item>European foulbrood of honey bees</item>
		<item>Varroosis of honey bees</item>
	</string-array>
	<string-array name="AHM_D1"> 
		<item>Highly pathogenic avian influenza</item>
		<item>Filariasis</item>
		<item>Newcastle disease Velogenic</item>
		<item>Avian encephalomyelitis</item>						
		<item>Marek\'s disease</item>						
		<item>Duck virus enteritis</item>
		<item>Avian infectious bronchitis</item>
		<item>Botulism</item>						
		<item>Infectious bursal disease (Gumboro disease)</item>
		<item>Duck virus hepatitis</item>
		<item>Avian infectious laryngotracheitis</item>
		<item>Infectious coryza</item>						
		<item>Melioidosis</item>
		<item>Avian leukosis</item>
		<item>Fowl cholera</item>
		<item>Avian mycoplasmosis (M. gallisepticum)</item>
		<item>Fowl pox</item>						
		<item>Avian salmonellosis (excluding B308 and B313)</item>
		<item>Fowl typhoid</item>
		<item>Newcastle disease Lentogenic</item>
		<item>Avian spirochaetosis</item>						
		<item>Coccidiosis</item>
		<item>Newcastle disease Mesogenic</item>
		<item>Avian tuberculosis</item>
		<item>Listeriosis</item>
		<item>Pullorum disease</item>
		<item>Newcastle disease Not typed</item>
		<item>Avian chlamydiosis</item>						
	</string-array>
	<string-array name="AHM_D2"> 
		<item>Foot and mouth disease type SAT 1</item>		
		<item>Foot and mouth disease type SAT 2</item>
		<item>Foot and mouth disease type SAT 3</item>
		<item>Foot and mouth disease not typed</item>		
		<item>Bluetongue</item>
		<item>Old World screwworm (Chrysomya bezziana)</item>
		<item>Rift Valley fever</item>		
		<item>Rinderpest</item>						
		<item>Echinococcosis/hydatidosis</item>
		<item>Foot and mouth disease type A</item>
		<item>Foot and mouth disease type Asia</item>
		<item>Foot and mouth disease type C</item>
		<item>Foot and mouth disease type O</item>
		<item>Surra (Trypanosoma evansi)</item>						
		<item>New World screwworm (Cochliomyia hominivorax)</item>
		<item>Paratuberculosis</item>
		<item>Anthrax</item>						
		<item>Heartwater</item>						
	</string-array>
	<string-array name="AHM_D4"> 
		<item>Q fever</item>
		<item>Rabies</item>
		<item>Old World screwworm (Chrysomya bezziana)</item>
		<item>Botulism</item>						
		<item>Other Pasteurellosis</item>
		<item>Echinococcosis/hydatidosis</item>
		<item>Intestinal Salmonella Infections</item>
		<item>New World screwworm (Cochliomyia hominivorax)</item>						
		<item>Toxoplasmosis</item>
		<item>Coccidiosis</item>
		<item>Aujeszky’s disease</item>
	</string-array>
	<string-array name="AHM_D5"> 
		<item>Bluetongue</item>
		<item>Vesicular stomatitis Indiana</item>
		<item>Lumpy skin disease</item>
		<item>Corridor disease (T.p. lawrencei)</item>						
		<item>Rabies</item>						
		<item>Dermatophilosis</item>
		<item>Malignant catarrhal fever</item>
		<item>Distomatosis (Liver Fluke)</item>						
		<item>Foot and mouth disease type SAT 2</item>
		<item>Botulism</item>
		<item>Vesicular stomatitis New Jersey</item>
		<item>Foot and mouth disease not typed</item>						
		<item>Old World screwworm (Chrysomya bezziana)</item>
		<item>Infectious bovine rhinotracheitis / infectious pus</item>
		<item>Mastitis</item>
		<item>Vesicular stomatitis Not typed</item>
		<item>Rift Valley fever</item>						
		<item>Foot and mouth disease type SAT 3</item>
		<item>Melioidosis</item>
		<item>Foot and mouth disease type A</item>
		<item>Rinderpest</item>						
		<item>Other Clostridial Infections</item>
		<item>Vibrionic dysentery</item>
		<item>East Coast fever (T.p. parva)</item>
		<item>Echinococcosis/hydatidosis</item>
		<item>Footrot</item>
		<item>Bovine anaplasmosis</item>
		<item>Intestinal Salmonella Infections</item>						
		<item>Bovine babesiosis</item>						
		<item>Bovine brucellosis</item>
		<item>Foot and mouth disease type Asia</item>
		<item>Bovine cysticercosis</item>						
		<item>Bovine genital campylobacteriosis</item>
		<item>Mucosal Disease/Bovine Virus Diarrhoea</item>
		<item>Bovine spongiform encephalopathy</item>
		<item>Enzootic bovine leukosis</item>						
		<item>Bovine tuberculosis</item>
		<item>Epizootic lymphangitis</item>
		<item>New World screwworm (Cochliomyia hominivorax)</item>
		<item>Paratuberculosis</item>						
		<item>Actinomycosis</item>
		<item>January disease (T.p. bovis)</item>
		<item>Surra (Trypanosoma evansi)</item>
		<item>Foot and mouth disease type C</item>						
		<item>Coccidiosis</item>
		<item>Leptospirosis</item>
		<item>Anthrax</item>
		<item>Theileriosis Not typed</item>						
		<item>Toxoplasmosis</item>
		<item>Foot and mouth disease type O</item>
		<item>Listeriosis</item>
		<item>Trichomonosis</item>						
		<item>Haemorrhagic septicaemia</item>
		<item>Heartwater</item>						
		<item>Trypanosomosis (tsetse-transmitted)</item>
		<item>Aujeszky’s disease</item>						
		<item>Ulcerative lymphangitis</item>
		<item>Contagious bovine pleuropneumonia</item>						
		<item>Foot and mouth disease type SAT 1</item>
		<item>Benign theileriosis (T. mutans)</item>						
		<item>Filariasis</item>
		<item>Blackleg</item>						
		<item>Q fever</item>
	</string-array>
	<string-array name="AHM_D7"> 
		<item>Q fever</item>
		<item>Filariasis</item>
		<item>Rabies</item>
		<item>Mastitis</item>						
		<item>Old World screwworm (Chrysomya bezziana)</item>						
		<item>Rift Valley fever</item>
		<item>Botulism</item>
		<item>Echinococcosis/hydatidosis</item>						
		<item>Melioidosis</item>
		<item>Canine distemper</item>
		<item>Intestinal Salmonella Infections</item>
		<item>Leishmaniosis</item>						
		<item>New World screwworm (Cochliomyia hominivorax)</item>
		<item>Leptospirosis</item>
		<item>Coccidiosis</item>
		<item>Aujeszky’s disease</item>
	</string-array>
	<string-array name="AHM_D8"> 
		<item>Venezuelan equine encephalomyelitis</item>
		<item>Filariasis</item>
		<item>Vesicular stomatitis Indiana</item>
		<item>Horse mange</item>						
		<item>Dourine</item>						
		<item>Horse pox</item>
		<item>Botulism</item>
		<item>Vesicular stomatitis New Jersey</item>						
		<item>Vesicular stomatitis Not typed</item>
		<item>Melioidosis</item>
		<item>Salmonellosis (Salmonella abortus equi)</item>
		<item>Intestinal Salmonella Infections</item>						
		<item>Strangles</item>
		<item>Epizootic lymphangitis</item>
		<item>African horse sickness</item>
		<item>Japanese encephalitis</item>
		<item>Surra (Trypanosoma evansi)</item>						
		<item>Equine coital exanthema</item>
		<item>Equine encephalomyelitis (Eastern and Western)</item>
		<item>Coccidiosis</item>
		<item>Equine infectious anaemia</item>						
		<item>Anthrax</item>
		<item>Equine influenza</item>
		<item>Glanders</item>
		<item>Equine piroplasmosis</item>
		<item>Equine rhinopneumonitis</item>
		<item>Equine viral arteritis</item>
		<item>Ulcerative lymphangitis</item>						
		<item>Contagious equine metritis</item>						
	</string-array>
    <string name="tCity">CITY/TOWN/VILLAGE</string>
    <string name="tCityName">CITY \'S NAME</string>
    <string name="tCityType">CITY \'S TYPE</string>
    <string name="tMarketName">MARKET\'S NAME</string>
    <string name="tCoordinates">COORDINATES</string>
	<string name="tUsername">USERNAME</string>
    <string name="tPassword">PASSWORD</string>
	<string name="tLogin">LOGIN</string>
    <string name="tCancel">CANCEL</string>
    <string name="tLat">LAT.</string>
    <string name="tLon">LON.</string>
    <string name="tSettings">SETTINGS</string>
    <string name="tDebugMode">DEBUG MODE</string>
    <string name="tCryptoSD">CRYPTOGRAPHY ON SD</string>
    <string name="tDelSurvey">DELETE SURVEY ON SUBMIT</string>
    <string name="tUseOldWebsite">USE OLD WEBSITE</string>
    <string name="tVariety">COMMODITY VARIETY OPTION</string>
    <string name="tSendToServer">SEND SURVEY TO SERVER</string>
    <string name="tUpdatesServer">UPDATES LISTS FROM SERVER</string>
    <string name="tGaulLevel">SET GAUL LEVEL</string>
    <string name="tLanguages">SET LANGUAGE</string>
    <string name="tInAppUpd">IN APP UPDATE</string>
    <string name="btnDefaultTemplate">SET DEFAULT TEMPLATE ...</string>
    <string name="btnClearSurvey">CLEAR SURVEY</string>
    <string name="btnSaveTemplate">SAVE AS TEMPLATE</string>
    <string name="btnSubmitServer">SUBMIT ON SERVER</string>
    <string name="btnBack">BACK</string>
    <string name="btnSave">SAVE ON DEVICE</string>
    <string name="btnSaveSingle">SAVE</string>
    <string name="rbnLogout">Logout</string>
    <string name="rbnLanguages">Languages</string>
    <string name="rbnNotification">Notification</string>
    <string name="rbnFeedback">Feedback</string>
    <string name="rbnUserManual">User Manual</string>
    <string name="rbnLicense">License</string>
    <string name="rbnSettings">Settings</string>
</resources>