<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/blue"
        android:gravity="center_vertical"
        android:text="@string/tSettings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

	<FrameLayout
	    android:id="@+id/blueBar"
	    android:layout_width="fill_parent"
	    android:layout_height="2dip"	    
	    android:layout_below="@+id/textSettings"
	    android:background="@color/bluebar" >
	</FrameLayout>
    
    
	<ScrollView
	    android:id="@+id/svSettings"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_above="@+id/linearLayout1"
	    android:layout_below="@+id/textSettings"
	    android:scrollbarAlwaysDrawVerticalTrack="true" >

    <LinearLayout
        android:id="@+id/llSettings"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnDefaultTemplate"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_margin="5dp"
            android:background="@color/light_blue"
            android:text="@string/btnDefaultTemplate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/spGaulChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:entries="@array/GaulLevels"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:prompt="@string/tGaulLevel"
            android:spinnerMode="dialog"
            android:text="@string/tGaulLevel" />
        <Spinner
            android:id="@+id/spLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:entries="@array/Languages"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:prompt="@string/tLanguages"
            android:spinnerMode="dialog"
            android:text="@string/tLanguages" />
		<!--         
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:entries="@array/Languages"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:prompt="@string/tLanguages"
            android:spinnerMode="dialog"
            android:text="@string/tLanguages" />        
         -->
        <CheckedTextView
            android:id="@+id/cbUseOldWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/tUseOldWebsite" />


        <CheckedTextView
            android:id="@+id/cbDelSurvey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/tDelSurvey" />

        <CheckedTextView
            android:id="@+id/cbDebug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/tDebugMode" />

        <CheckedTextView
            android:id="@+id/cbInAppUpd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/tInAppUpd" />

        <CheckedTextView
            android:id="@+id/cbCrypto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/tCryptoSD" />

        <CheckedTextView
            android:id="@+id/cbVariety"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/tVariety" />

        <CheckedTextView
            android:id="@+id/cbSendToServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/tSendToServer" />

        <CheckedTextView
            android:id="@+id/cbUpdatesFromServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/tUpdatesServer" />

        </LinearLayout>
	</ScrollView>>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnBack"
            style="@style/Widget.Sherlock.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dip"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/btnBack"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnSaveSingle"
            style="@style/Widget.Sherlock.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dip"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/btnSaveSingle"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</RelativeLayout>