<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/org.faostat.crowdprices.rc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"    
    android:fontFamily="sans-serif-light"   
    tools:context=".CrowdMain" >

   
    <ImageView
        android:id="@+id/imgCrowdPrices"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_marginTop="65dip"
        android:layout_alignParentLeft="true"        
        android:src="@drawable/logo_menu" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_below="@+id/imgCrowdPrices"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/tUsername"
        android:text="fgrita"
        android:inputType="text" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/tPassword"
        android:text="fgrita"
        android:inputType="textPassword" />
    
    <Button
        android:id="@+id/btnCancel"
        style="@style/Widget.Sherlock.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dip"
        android:background="@color/blue"
        android:text="@string/tCancel" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.Sherlock.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCancel"
        android:layout_alignParentLeft="true"
        android:background="@color/blue"
        android:text="@string/tLogin" />


</RelativeLayout>
