<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<LinearLayout
	    android:id="@+id/btnContainer"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:orientation="horizontal" >

		<Button
		    android:id="@+id/btnBack3"
		    style="@style/Widget.Sherlock.Button.Small"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="1dip"
		    android:layout_weight="1"
		    android:background="@color/blue"
		    android:text="@string/btnBack"
		    android:textAppearance="?android:attr/textAppearanceLarge" />
	</LinearLayout>

    <TextView
        android:id="@+id/SavedOnDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:text="Saved on device"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/Transmitted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SavedOnDevice"
        android:layout_below="@+id/SavedOnDevice"
        android:layout_marginTop="20dp"
        android:text="Transmitted"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/StatusDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/SavedOnDevice"
        android:layout_alignBottom="@+id/SavedOnDevice"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:textColor="@color/light_blue"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="" />

    <TextView
        android:id="@+id/StatusTransmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Transmitted"
        android:layout_alignBottom="@+id/Transmitted"
        android:layout_alignRight="@+id/StatusDevice"
        android:text="READY"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/light_blue" />

<Button
    android:id="@+id/btnSubmit"
    style="@style/Widget.Sherlock.Button.Small"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/btnContainer"
    android:layout_alignLeft="@+id/Transmitted"
    android:layout_alignRight="@+id/StatusTransmission"
    android:layout_marginBottom="5dp"
    android:background="@color/light_blue"
    android:text="@string/btnSubmitServer"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<Button
    android:id="@+id/btnSave"
    style="@style/Widget.Sherlock.Button.Small"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/btnSubmit"
    android:layout_alignLeft="@+id/btnSubmit"
    android:layout_alignRight="@+id/btnSubmit"
    android:layout_marginBottom="10dp"
    android:background="@color/light_blue"
    android:text="@string/btnSave"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<Button
    android:id="@+id/btnClear"
    style="@style/Widget.Sherlock.Button.Small"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/btnSave"
    android:layout_alignLeft="@+id/btnSave"
    android:layout_alignRight="@+id/btnSubmit"
    android:layout_marginBottom="10dp"
    android:background="@color/light_blue"
    android:text="@string/btnClearSurvey"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<Button
    android:id="@+id/btnTemplates"
    style="@style/Widget.Sherlock.Button.Small"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/btnClear"
    android:layout_alignLeft="@+id/btnClear"
    android:layout_alignRight="@+id/btnSubmit"
    android:layout_marginBottom="10dp"
    android:background="@color/light_blue"
    android:text="@string/btnSaveTemplate"
    android:textAppearance="?android:attr/textAppearanceMedium" />
    
</RelativeLayout>
